samples/_failures_safe/1761006405_26a2a4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cdb69686.c: In function ‘main’:
./samples/SAFE/__tmp_cdb69686.c:150:15: error: expected ‘;’ at end of input
  150 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_cdb69686.c:150:9: error: expected declaration or statement at end of input
  150 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_cdb69686.c:150:9: error: expected declaration or statement at end of input
